Minor fixes
- Fix cart title not visible if cart is empty
- Fix map positioned on bottom when height of main container is bigger

--- a/src/seatchart.css
+++ b/src/seatchart.css
@@ -3,6 +3,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     padding: 25px;
+    align-items: flex-start;
 }
 
 .sc-right-container {
